# jpsubreddits

./: .gitignore  LICENSE  README.md  index.html  jpsubreddits-pretty.json  jpsubreddits.cabal  jpsubreddits.json  params.json
src/: Main.hs
src/JPSubreddits/: Subreddit.hs  Types.hs
src/JPSubreddits/Source/: Newsokur.hs
