name:                jpsubreddits
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              sifisifi
maintainer:          sifisifi.rns@gmail.com
copyright:           (c) 2015 sifisifi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable jpsubreddits
    main-is: Main.hs

    other-modules: JPSubreddits.Types
                 , JPSubreddits.Subreddit
                 , JPSubreddits.Source.Newsokur

    build-depends: base             >= 4.7 && < 5.0
                 , aeson            >= 0.6 && < 1.0
                 , aeson-pretty
                 , bytestring       >= 0.10
                 , html-conduit     == 1.1.*
                 , http-conduit     == 2.1.*
                 , text             >= 1.0 && < 2.0
                 , time
                 , transformers     >= 0.3
                 , xml-conduit      == 1.2.*

    hs-source-dirs: src
    default-language: Haskell2010
